<?php

declare(strict_types=1);

namespace App\Readers;

interface Reader
{
    public function read(string $fileName): array;
}