@startuml
'https://plantuml.com/class-diagram

'Service

class FileReaderService {

    # FileInfo $fileInfo
    # ChoiceClassNameByExtension $choice
    + read(string $pathToFile)
}

'// Helper

class DirExists {
    + function by(string $path): bool
}

class FileExists {
    + by(string $path): bool
}

class GetDirByPath {
    + by(string $path): string
}

class GetExtensionByPath {
    + by(string $path): string
}

class GetFileNameByPath {
    + by(string $path): string
}

FileInfo ....> DirExists
FileInfo ....> FileExists
FileInfo ...> GetDirByPath
FileInfo ...> GetExtensionByPath
FileInfo .....> GetFileNameByPath
'// App\Readers\Reader
FactoryReader o--> FileInfo


interface Reader {
    read($fileName) : array;
}
class CsvReader {
    read($fileName) : array;
}
class JsonReader {
    read($fileName) : array;
}

CsvReader -up--|> Reader
JsonReader -up--|> Reader

interface ChoiceInterface {
    + getClassName(): string;
}

class FileInfo {
    + FileInfo(private string $path)
    + getFileName() : string
    + getDir() : string
    + getExtension() : string
}

class ChoiceClassNameByExtension {
    + ChoiceClassNameByExtension(FileInfo $fileInfo);
    + getClassName() : string;
}

ChoiceClassNameByExtension --|> ChoiceInterface

interface FactoryReaderInterface {
    create(ChoiceInterface $className) : Reader
}

class FactoryReader {
    create(ChoiceInterface $className) : Reader
}

FileReaderService *--> ChoiceClassNameByExtension

FactoryReader -|> FactoryReaderInterface
FactoryReader o-->Reader
FileReaderService *--> FactoryReader

@enduml